compiler/testData/diagnostics/tests/override/AbstractVarNotImplemented.jet
abstract class A {
    abstract var i: Int
}

class <!ABSTRACT_MEMBER_NOT_IMPLEMENTED!>B<!>() : A() {
}
